<resources>
    <string name="app_name">Recycle</string>
    <string name="PhoneNumberEditText">Enter Phone Number</string>
    <string name="SendOTPButton">Send OTP</string>
    <string name="SignInButton">Sign in Later</string>
    <string name="TermsAndConditions">"By providing my phone number, I hereby agree and accept the Terms of Service and Privacy Policy in use of the Recycle App"</string>
    <string name="ImageDescription">App Logo</string>
    <string name="WaitingTextView">Waiting for OTP</string>
    <string name="VerifyButton">Verify</string>
    <string name="ResendButton">Resend OTP</string>
    <string name="ProfileDescription">Profile Logo</string>
    <string name="EnterNameEditText">Enter Name</string>
    <string name="EnterAgeEditText">Enter Age</string>
    <string name="EnterAddressEditText">Enter Address</string>
    <string name="UploadButton">Upload Image</string>
    <string name="RegisterButton">Register</string>
    <string name="ProductName">Product Name</string>
    <string name="Price">Price</string>
    <string name="ProductImageDescription">Image Description</string>
    <string name="SellProductName">Product Name</string>
    <string name="MyProductImageDescription">Image Description</string>
    <string name="AddButtonDescription">Add</string>
    <string name="MoreInfoFAB">More Info</string>
        <string name="DisposeCentreName">Dispose Centre Name</string>
    <string name="PreferenceCategory1">Profile</string>
    <string name="PreferenceCategory2">Other Settings</string>
    <string name="ChangeProfilePreference">Change Profile</string>
    <string name="ChangePhonePreference">Change Phone Number</string>
    <string name="HistoryPreference">History</string>
    <string name="HelpAndSupportPreference">Help and Support</string>
    <string name="ReportIssuePreference">Report Issue</string>
    <string name="AboutPreference">About</string>
    <string name="ShareAppPreference">Share App</string>
    <string name="DeleteAccountPreference">Delete Account</string>
    <string name="LogOutPreference">Log Out</string>
    <string name="NoInternetConnection">No Internet Connection</string>
    <string name="NoInternetImageDescription">No Internet Image</string>
    <string name="NoInternetAction">Check you internet connection and Try again</string>
    <string name="NoSearchResult">Empty Search Result</string>
    <string name="NoSearchResultImageDescription">Empty Search Result Image</string>
    <string name="NoSearchHint">Oops! we did not find what you asked for</string>
    <string name="EmptyResult">You have not Sold Anything Until Now</string>
    <string name="EmptyResultImageDescription">Empty Result Image</string>
    <string name="ServerError">Server Not Responding</string>
    <string name="ServerErrorImageDescription">Server Error Image</string>
    <string name="ServerErrorHint">Looks like the server is down, Try after sometime</string>
    <string name="MessageHint">Type a message</string>
    <string name="ChatButton">Chat</string>
    <string name="ContactButton">Contact Seller</string>
    <string name="ProductNameLabel">Product</string>
    <string name="PriceLabel">Price</string>
    <string name="UploadDateLabel">Upload Date</string>
    <string name="YearsOfUsageLabel">   Years of Usage   </string>
    <string name="SellerLabel">Seller</string>
    <string name="ProductNameValue">Product Name</string>
    <string name="PriceValue">Product Price</string>
    <string name="UploadDateValue">Product Upload Date</string>
    <string name="YearsOfUsageValue">Product Used in Years</string>
    <string name="SellerValue">Seller Name</string>
    <string name="ProductDescriptionValue">Product Description</string>
    <string name="SellerProfileDescription">Seller Profile</string>
    <string name="SellerNameValue">Seller Name</string>
    <string name="SellerPhoneValue">Seller Phone</string>
    <string name="SellerAddressValue">Seller Address</string>
    <string name="SellerCallButton">Call</string>
    <string name="MarkAsSoldButton">Mark Sold/Unsold</string>
    <string name="MarkAsReceivedButton">Mark As Received</string>
    <string name="MyProductNameLabel">Product</string>
    <string name="MyPriceLabel">Price</string>
    <string name="MyUploadDateLabel">Upload Date</string>
    <string name="MyYearsOfUsageLabel">   Years of Usage   </string>
    <string name="MyStatus">Product Status</string>
    <string name="MyProductNameValue">Product Name</string>
    <string name="MyPriceValue">Product Price</string>
    <string name="MyUploadDateValue">Product Upload Date</string>
    <string name="MyYearsOfUsageValue">Product Used in Years</string>
    <string name="MyStatusValue">Product Status</string>
    <string name="MyProductDescriptionValue">Product Description</string>
    <string name="UploadImageButton">Upload Image</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButton">Home</string>
    <string name="EnterProductNameHint">Enter Product Name</string>
    <string name="EnterPriceHint">Enter Price</string>
    <string name="EnterDescriptionHint">Provide a description of Production</string>
    <string name="EnterYearsOfUsageHint">Years Of Usage</string>
    <string name="DisposeCentreCallButton">Call</string>
    <string name="DisposeCentreNameValue">Dispose Centre Name</string>
    <string name="DisposeCentrePhoneValue">Phone Number</string>
    <string name="DisposeCentreImageDescription">Dispose Centre Image</string>
    <string name="DisposeCentreAddressValue">Dispose Centre Address</string>
    <string name="MyProductName">Product Name</string>
    <string name="ProductDate">Date</string>
    <string name="UploadNewProfileButton">Upload Image</string>
    <string name="SaveNewProfileButton">Save</string>
    <string name="CancelProfileButton">Home</string>
    <string name="OldNameValue">My Name</string>
    <string name="OldPhoneValue">My Phone Number</string>
    <string name="EnterNewAddressHint">Enter New Address</string>
    <string name="EnterNewAgeHint">Enter Age</string>
    <string name="NewPhoneNumberEditText">Enter New Phone Number</string>
    <string name="NewOTPButton">Send OTP</string>
    <string name="WaitingAgainTextView">Waiting for OTP</string>
    <string name="VerifyAgainButton">Verify</string>
    <string name="ResendAgainButton">Resend OTP</string>
    <string name="Overview">Overview</string>
    <string name="AboutString1">Consumerism has resulted in unnecessary purchases.
        This lack of responsibility from consumers side has resulted in man made waste to skyrocket.
        Most of the products we purchase can be recycled while
        other products cannot be recycled with existing technology or parts of the
        product cannot be recycled. So it is important to ensure that these products
        at the end of their lifecycle do not reach landfills. Another issue is
        that many of the items that end up in landfill or waste collection centre are
        still usable. At the same time there are many people who require the same
        product but cannot afford it.
    </string>
    <string name="AboutString2">So it would be better if the consumers have an
        option to sell their products to others who require the same product. This is
        not a new concept. Traditionally we used to sell useful items to our friends
        or relatives when we no longer used it. So we just decided to make an application
        that would solve the issue. Also the application shows a list of recycling centres,
        waste collection centres. Users can communicate with each other about the price and
        how the product would be transferred.</string>
    <string name="AboutString3">Remember we do not provide delivery services. So it is the user responsibility to ensure the payments
        and the delivery of the product. If there are any issues you can report to us and we will
        get back to you.</string>
    <string name="LearnAboutWaste">Learn About Waste</string>
    <string name="EwasteButton">More about E-waste</string>
    <string name="PlasticButton">More about Plastic</string>
    <string name="MoreAboutWasteButton">Types of Waste in Detail</string>
    <string name="WasteType">Waste is classified into two types:
        Biodegradable and Non-biodegradable waste.
        Biodegradable wastes are the wastes that come from our kitchen and it includes
        food remains, garden waste, etc. Biodegradable waste is also known as moist
        waste.This can be composted to obtain manure. Biodegradable wastes decompose
        themselves over a period of time depending on the material. Non-biodegradable wastes
        are the wastes which include old newspapers, broken glass pieces, plastics, etc.
        Non-biodegradable waste is known as dry waste. Dry wastes can be recycled
        and can be reused. Non-biodegradable wastes do not decompose by themselves
        and hence are major pollutants.</string>
    <string name="RecyclingHeading">Recycling of Wastes</string>
    <string name="RecyclingContent">Recycling of waste product is very important as 
        this process helps in processing waste or used products into useful or new products.
        Recycling helps in controlling air, water, and land pollution. It also uses less energy.
        There are a number of items that can be recycled like paper, plastic, glass, 
        etc. Recycling helps in conserving natural resources and also helps in conserving
        energy. Recycling helps in protecting the environment as it helps in reducing
        air, water, and soil pollution.</string>
    <string name="PlasticHeading">Plastic</string>
    <string name="TypesofPlastic">Types of Plastic</string>
    <string name="PET">PET (Polyethylene Terephthalate)</string>
    <string name="PETImage">PET Image</string>
    <string name="HDPE">HDPE (High Density Polyethylene)</string>
    <string name="HDPEImage">HDPE Image</string>
    <string name="PVC">PVC(Polyvinyl Chloride)</string>
    <string name="PVCImage">PVC Image</string>
    <string name="LDPE">LDPE (Low-Density Polyethylene)</string>
    <string name="LDPEImage">LDPE Image</string>
    <string name="Polypropylene">PP (Polypropylene)</string>
    <string name="PolypropyleneImage">Polypropylene Image</string>
    <string name="Polystyrene">PS (Polystyrene)</string>
    <string name="PolystyreneImage">Polystyrene Image</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="MiscellaneousPlastic">SPI code 7 is used for all plastics not part
        of the other 6 types. Despite their inclusion in popular items such as
        sunglasses, computer casing, nylon, compact discs and baby bottles, these
        plastics contain the toxic chemical bisphenol A or BPA. Not only are they
        dangerous, but these types of plastics are also extremely hard to recycle
        as they don’t break down easily.</string>
    <string name="EwasteHeading">E-waste</string>
    <string name="EwasteContent">Electronic waste (e-waste) typically includes
        discarded computer monitors, motherboards, mobile phones and chargers,
        compact discs, headphones, television sets, air conditioners and refrigerators.
        According to the Global E-Waste Monitor 2017, India generates about 2
        million tonnes (MT) of e-waste annually and ranks fifth among e-waste
        producing countries, after the US, China, Japan and Germany. In 2016-17,
        India treated only 0.036 MT of its e-waste. About 95 per cent of India’s
        e-waste is recycled in the informal sector and in a crude manner. A
        report on e-waste presented by the United Nations (UN) in World Economic
        Forum on January 24, 2019 points out that the waste stream reached
        48.5 MT in 2018 and the figure is expected to double if nothing changes.
    </string>
    <string name="HomeOption">Home</string>
</resources>