<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customSkyBlue"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".SubActivity.InfoActivity_Plastic">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/Plastic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/PlasticHeading"
            android:textColor="@color/customWhite"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ytPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/ytPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Plastic"
            app:layout_constraintWidth_percent="0.95" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:text="@string/TypesofPlastic"
            android:textColor="@color/customWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ytPlayer" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="29dp"
            android:gravity="center"
            android:text="@string/PET"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:layout_constraintHeight_percent="0.05" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/PETImage"
            android:src="@drawable/pet"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="27dp"
            android:gravity="center"
            android:text="@string/HDPE"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/HDPEImage"
            android:src="@drawable/hdpe"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="@string/PVC"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/PVCImage"
            android:src="@drawable/pvc"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/LDPE"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/LDPEImage"
            android:src="@drawable/ldpe"
            app:layout_constraintBottom_toTopOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="101dp"
            android:text="@string/Polypropylene"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/PolypropyleneImage"
            android:src="@drawable/polypropylene"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="113dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="113dp"
            android:text="@string/Polystyrene"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/imageView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/PolystyreneImage"
            android:src="@drawable/polystyrene"
            app:layout_constraintBottom_toTopOf="@id/textView22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="113dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="113dp"
            android:text="@string/Miscellaneous"
            android:textColor="@color/customWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:justificationMode="inter_word"
            android:text="@string/MiscellaneousPlastic"
            android:textAlignment="center"
            android:textColor="@color/customWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>