<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customBlue"
    android:scrollbars="none"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".SubActivity.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Overview"
            android:textColor="@color/customWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_below="@id/textView3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/AboutString1"
            android:textAlignment="center"
            android:textColor="@color/customWhite"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="20dp"
            android:text="@string/AboutString2"
            android:textAlignment="center"
            android:textColor="@color/customWhite"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/AboutString3"
            android:textAlignment="center"
            android:textColor="@color/customWhite"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>
</ScrollView>