<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customBlue"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".SubActivity.InfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/electronic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@color/customStrongSkinColour"
            android:text="@string/EwasteButton"
            android:textAllCaps="false"
            android:textColor="@color/customBlack"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/plastic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/plastic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="79dp"
            android:background="@color/customStrongSkinColour"
            android:text="@string/PlasticButton"
            android:textAllCaps="false"
            android:textColor="@color/customBlack"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/waste_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/electronic"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:gravity="center|center_vertical"
            android:text="@string/LearnAboutWaste"
            android:textColor="@color/customWhite"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/electronic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/waste_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:text="@string/WasteType"
            android:textAlignment="center"
            android:textColor="@color/customWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/more_about_waste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plastic"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:text="@string/RecyclingHeading"
            android:textColor="@color/customWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_about_waste"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:autoSizeMaxTextSize="18sp"
            android:justificationMode="inter_word"
            android:text="@string/RecyclingContent"
            android:textAlignment="center"
            android:textColor="@color/customWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintWidth_percent="0.9" />

        <Button
            android:id="@+id/more_about_waste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@color/customStrongSkinColour"
            android:text="@string/MoreAboutWasteButton"
            android:textAllCaps="false"
            android:textColor="@color/customBlack"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/waste_type"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>